--- a/style.css
+++ b/style.css
@@ -63,13 +63,14 @@ header a:hover {
 }
 
 /* ----------------- BOX ----------------------- */  
+
 .caixa{
 
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 700px;
-    
+
 }
 .box {
 
@@ -137,8 +138,7 @@ input{
 .Créditos {
 
     margin: 65px 0 400;
-    padding: 94px 24px;
-
+    padding: 47px;
 
     background-color: black;
     color: aliceblue;
@@ -209,8 +209,22 @@ color:rgba(71, 80, 72, 0.877)
     border-radius: 10px;
     font-size: 15px;
     animation: border 20s linear infinite;
-    background: rgb(238,245,3);
-    background: linear-gradient(214deg, rgba(238,245,3,0.623686974789916) 0%, rgba(0,0,0,1) 69%);
+    background: rgb(0, 0, 0);
+
+}
+.info::after{
+
+    content: "";
+    z-index: -1;
+    position: absolute;
+    width: calc(100% + 30px);
+    height: calc(100% + 30px);
+    top: -15px;
+    left: -15px;
+    background: rgb(23,22,22);
+    background: linear-gradient(24deg, rgba(23,22,22,1) 0%, rgba(230, 230, 7, 0.608) 100%);
+    background-size: 300%;
     animation: border 20s linear infinite;
+    filter: blur(50px);
 
 }
